properly align effect texts, prevent linebreak for combos

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -234,6 +234,7 @@ html, body {
 
 #effect-overlay h1 {
     width: 100%;
+    height: 100%;
     text-align: center;
 }
 
